# esp32-ds18b20

./: .env.development  .envrc  .gitignore  README.md  boot.py  main.py  pyproject.toml
lib/: chirp.py  hello.py
scripts/: flash.sh
