[tool.poetry]
name = "esp-test"
version = "0.1.0"
description = ""
authors = ["Geoff Johnson <geoff.jay@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
esptool = "^3.0"
adafruit-ampy = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
